# imgui-test

./: CMakeLists.txt  colors.h  imgui.ini  load_texture_from_file.h  main.cpp  my_widgets.cpp  my_widgets.h  style.h
data/: svg.txt
libs/sdl3/cmake/: SDL3Config.cmake  SDL3headersTargets.cmake  SDL3sharedTargets-debug.cmake  SDL3sharedTargets.cmake  SDL3testTargets-debug.cmake  SDL3testTargets.cmake
libs/sdl3/include/SDL3/: SDL_revision.h
libs/sdl3/lib/: SDL3.lib  SDL3_test.lib
libs/sdl3/lib/pkgconfig/: sdl3.pc
